--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  provider:
+
+  # Supabase library
+  supabase: ^1.3.0
+  supabase_flutter: ^1.3.1
+  supabase_auth_ui:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  supabase: ^1.3.0
-  supabase_flutter: ^1.3.1
 
 dev_dependencies:
   flutter_test:
